Add GitHub repo retrieval and DTO changes